Fixed Positioning
All boxes were too far to the right and fixed size for the aboutme box

--- a/main.css
+++ b/main.css
@@ -65,11 +65,11 @@ h2 {
 }
 
 #aboutme{
-    width: 45%; height: 700px;
+    width: 60%; height: 700px;
     border-style: solid;
     border-color: white;
     background:rgba(1,1,1,0.5);
-    margin-left :27.5%;
+    margin-left :19.5%;
     margin-top: 250px;
 }
 
@@ -78,7 +78,7 @@ h2 {
     border-style: solid;
     border-color: white;
     background:rgba(1,1,1,0.5);
-    margin-left: 21%;
+    margin-left: 19.5%;
     margin-top: 100px;
 }
 
@@ -106,9 +106,10 @@ h2 {
     border-style: solid;
     border-color: white;
     background:rgba(1,1,1,0.5);
-    margin-left: 21%;
+    margin-left: 19.5%;
     margin-top: 100px;
 }
+
 
 .gallery {
     margin:17.5px;
